--- a/src/components/NewCharacter/NewCharacter.module.scss
+++ b/src/components/NewCharacter/NewCharacter.module.scss
@@ -4,7 +4,7 @@
 .add-button {
   height: 80px;
   border-radius: 8px;
-  border: 1px solid gray;
+  background-color: $dark1;
   display: flex;
   justify-content: center;
   align-items: center;
