--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -1,22 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100;0,200;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600&display=swap");
 
 //FONTS
-$title: 'Fredoka One', cursive;
-$text: 'Libre Franklin', sans-serif;
+
+$title: "Montserrat", sans-serif;
+$text: "Libre Franklin", sans-serif;
 
 //COLORS
 $dark1: #25171a;
-$dark2: #4B244A;
-$medium: #533A7B;
-$light1: #6969B3;
-$light2: #98C1D9;
+$dark2: #4b244a;
+$medium: #533a7b;
+$light1: #6969b3;
+$light2: #98c1d9;
 $text-color: white;
-
-
-
-//MIXINS
-@mixin franklin-font {
-    font-family: $title;
-    letter-spacing: 1.5px;
-}
