--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -14,7 +14,7 @@ p {
 }
 
 button {
-  height: 40px;
+  height: 50px;
   padding: 0 30px;
   border-radius: 6px;
   font-family: $text;
@@ -25,4 +25,7 @@ button {
   background-color: blue;
   max-width: 230px;
   width: 100%;
+  &:disabled {
+    filter: grayscale(0.9);
+  }
 }
