added error message

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -35,6 +35,11 @@
     max-width: 1000px;
     width: 100%;
     margin: 0 auto;
+    .status-message {
+      text-align: center;
+      margin-top: 50px;
+      font-size: 26px;
+    }
   }
 }
 
