--- a/src/components/Filter/Filter.module.scss
+++ b/src/components/Filter/Filter.module.scss
@@ -1,5 +1,5 @@
-@import "src/styles/base/_variables.scss";
-@import "src/styles/base/_base.scss";
+@import "styles/base/_variables.scss";
+@import "styles/base/_base.scss";
 
 .filter-container {
   font-family: $text;
