--- a/src/components/AddCharacter/Form/Form.module.scss
+++ b/src/components/AddCharacter/Form/Form.module.scss
@@ -4,7 +4,10 @@
 .form {
   background-color: $dark1;
   border-radius: 8px;
-  padding: 20px;
+  max-width: 1000px;
+  width: 100%;
+  height: 800px;
+  margin: 50px auto;
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -29,6 +32,7 @@
       border-radius: 6px;
       border-style: none;
       padding: 10px;
+      font-size: 16px;
       &:focus-visible {
         outline: none;
       }
