--- a/src/components/Home/Filter/Filter.module.scss
+++ b/src/components/Home/Filter/Filter.module.scss
@@ -3,21 +3,26 @@
 
 .filter-container {
   font-family: $text;
-  margin: 26px 0;
   display: flex;
   gap: 20px;
   align-items: center;
   flex-wrap: wrap;
   justify-content: flex-end;
+  width: 100%;
+
   select {
-    height: 40px;
+    height: 50px;
     border-radius: 6px;
     border-style: none;
     padding: 10px;
-    max-width: 230px;
+    max-width: 200px;
     width: 100%;
+    font-size: 16px;
     &:focus-visible {
       outline: none;
+    }
+    &:hover {
+      cursor: pointer;
     }
   }
 }
