--- a/src/views/ProfileView/ProfileView.module.scss
+++ b/src/views/ProfileView/ProfileView.module.scss
@@ -2,46 +2,56 @@
 @import "styles/base/_base.scss";
 
 .profile-view {
-  background-color: $dark1;
-  border-radius: 8px;
-  max-width: 1000px;
-  width: 100%;
-  height: 800px;
-  margin: 50px auto;
-  padding: 40px;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  font-family: $text;
-  margin-bottom: 40px;
-
-  h2 {
-    font-size: 30px;
-    font-weight: 600;
-    margin-bottom: 20px;
+  .arrow {
+    position: absolute;
+    margin-left: 20px;
+    margin-top: 10px;
+    width: 80px;
+    fill: white;
+    rotate: 270deg;
   }
+
   .profile-container {
+    background-color: $dark1;
+    border-radius: 8px;
+    max-width: 1000px;
+    width: 100%;
+    margin: 50px auto;
+    padding: 40px 40px 50px 40px;
     display: flex;
-    gap: 40px;
+    flex-direction: column;
+    gap: 20px;
+    font-family: $text;
+    margin-bottom: 40px;
 
-    .profile-image {
-      height: 360px;
-      width: 360px;
-      border-radius: 8px;
-      object-fit: cover;
+    h2 {
+      font-size: 30px;
+      font-weight: 600;
+      margin-bottom: 20px;
     }
-
-    .profile-data {
+    .data-container {
       display: flex;
-      flex-direction: column;
-      justify-content: space-between;
+      gap: 40px;
 
-      p {
-        margin-bottom: 6px;
+      .profile-image {
+        height: 360px;
+        width: 360px;
+        border-radius: 8px;
+        object-fit: cover;
       }
 
-      h3 {
-        font-size: 24px;
+      .profile-data {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+
+        p {
+          margin-bottom: 6px;
+        }
+
+        h3 {
+          font-size: 24px;
+        }
       }
     }
   }
